# tq

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Common.hpp  Config.hpp.in  Decoder.hpp  StrictDecoder.hpp  StrictDecoderWithBlanks.hpp  Utilities.hpp
src/: Decoder.cpp  StrictDecoder.cpp  StrictDecoderWithBlanks.cpp  Utilities.cpp  main.cpp
